fixed TritBits privacy policy and added ColorShift privacy policy

--- a/css/site.css
+++ b/css/site.css
@@ -3,7 +3,9 @@
  */
 
 /* Links */
-a,
+a {
+	color: #5cf
+}
 a:focus,
 a:hover {
   color: #fff;
